log
Fri Mar 27 05:47:31 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
254817d
Fri Mar 27 05:56:42 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:79:21: error: invalid initializer
   79 |     Node new_node = createNode(data);
      |                     ^~~~~~~~~~
list.c:80:13: error: invalid type argument of ‘->’ (have ‘Node’)
   80 |     new_node->prev = list->current;
      |             ^~
list.c:81:13: error: invalid type argument of ‘->’ (have ‘Node’)
   81 |     new_node->next = list->current->next;
      |             ^~
list.c:82:33: error: incompatible types when assigning to type ‘Node *’ from type ‘Node’
   82 |     list->current->next->prev = new_node;
      |                                 ^~~~~~~~
list.c:83:27: error: incompatible types when assigning to type ‘Node *’ from type ‘Node’
   83 |     list->current->next = new_node;
      |                           ^~~~~~~~
254d7cd
Fri Mar 27 05:57:15 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a6b567e
Fri Mar 27 06:00:14 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:79:33: error: dereferencing ‘void *’ pointer [-Werror]
   79 |     Node *new_node = createNode(*data);
      |                                 ^~~~~
list.c:79:33: error: invalid use of void expression
cc1: all warnings being treated as errors
f8c7076
Fri Mar 27 06:00:37 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
becb0ac
Fri Mar 27 06:01:22 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:79:21: error: invalid initializer
   79 |     Node new_node = createNode(data);
      |                     ^~~~~~~~~~
list.c:80:13: error: invalid type argument of ‘->’ (have ‘Node’)
   80 |     new_node->prev = list->current;
      |             ^~
list.c:81:13: error: invalid type argument of ‘->’ (have ‘Node’)
   81 |     new_node->next = list->current->next;
      |             ^~
list.c:82:33: error: incompatible types when assigning to type ‘Node *’ from type ‘Node’
   82 |     list->current->next->prev = new_node;
      |                                 ^~~~~~~~
list.c:83:27: error: incompatible types when assigning to type ‘Node *’ from type ‘Node’
   83 |     list->current->next = new_node;
      |                           ^~~~~~~~
6f5f92c
Fri Mar 27 06:02:17 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e4a418b
Fri Mar 27 06:02:29 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:80:17: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   80 |     *new_node = createNode(data);
      |                 ^~~~~~~~~~
cd90879
Fri Mar 27 06:04:38 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
b087050
